<resources>
    <string name="app_name" translatable="false">Ticket-Resto-App</string>
    <string name="tab_text_Accueil">Accueil</string>
    <string name="tab_text_Parametre">Paramètre</string>
    <string name="title" translatable="false">Ticket Resto Optimisateur</string>
    <string name="txt_invite_saisie_montant">Saisissez le montant à payer</string>
    <string name="placeholder_montant">Montant à payer</string>
    <string name="button_text">Calculer</string>
    <string name="txt_reste">"Il reste "</string>
    <string name="to_pay">à payer</string>
    <string name="txt_enregistrer">Enregistrer</string>
    <string name="txt_montant_ticket_1">1° ticket :</string>
    <string name="txt_montant_ticket_2">2° ticket :</string>
    <string name="txt_label_quantite_ticket" translatable="false">%s</string>
    <string name="nb_ticket">fois</string>
    <string name="txt_result">Résultat</string>
    <string name="txt_ticket_of">Ticket de</string>
    <string name="txt_parametre">Configurer les tickets</string>
    <string name="txt_annuler">Annuler</string>
</resources>