<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/empty_divider"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="30dp"
    android:paddingRight="15dp"
    android:showDividers="middle"
    tools:context=".Accueil">

    <!-- Titre -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
    </LinearLayout>


    <!-- Invite à saisir le montant -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_invite_saisie_montant"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <!-- Saisie du montant -->

    <EditText
        android:id="@+id/montantAPayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/placeholder_montant"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCalculer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        tools:ignore="TouchTargetSizeCheck" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_result" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_ticket_of" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!-- Premier ticket resultat -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelPremierTicket"
                    style="@style/labelValue"
                    android:text="@string/txt_label_quantite_ticket" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/quantitePremierTicket"
                        style="@style/quantiteValue"
                        android:text="0"
                         />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nb_ticket" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:background="?android:attr/listDivider" />

            <!-- Second ticket resultat -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelSecondTicket"
                    style="@style/labelValue"
                    android:text="@string/txt_label_quantite_ticket" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/quantiteSecondTicket"
                        style="@style/quantiteValue"
                        android:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nb_ticket" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <!-- Reste à payer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_reste" />

        <TextView
            android:id="@+id/valeurReste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/quantiteBackground"
            android:paddingHorizontal="10dp"
            android:paddingVertical="3dp"
            android:textColor="@color/black"
            android:text="8€" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_pay" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/btnParametre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_parametre"
        tools:ignore="TouchTargetSizeCheck" />

</LinearLayout>